# ai-shell

./: CMakeLists.txt  README.md
include/: file_utils.h  process_info.h
src/: file_utils.c  main.c  process_info.c
